[metadata]
name = colcon-common-extensions
version = attr: colcon_common_extensions.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-common-extensions/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-common-extensions/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Meta package aggregating colcon-core and common extensions.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
    colcon-argcomplete; sys_platform != 'win32'
    colcon-bash; sys_platform != 'win32'
    colcon-cd; sys_platform != 'win32'
    colcon-cmake
    colcon-core
    colcon-defaults
    colcon-devtools
    colcon-library-path
    colcon-metadata
    colcon-notification
    colcon-output
    colcon-package-information
    colcon-package-selection
    colcon-parallel-executor
    colcon-powershell
    colcon-python-setup-py
    colcon-recursive-crawl
    colcon-ros
    colcon-test-result
    colcon-zsh; sys_platform != 'win32'
packages = find:
zip_safe = true
